# Macaw2

./: .gitignore  pyproject.toml  readme.md
macaw2/: main.py
macaw2/commands/: account.py  entry.py  register.py  reverse.py  trial_balance.py  void.py
macaw2/models/: database.py
